--- a/preamble.tex
+++ b/preamble.tex
@@ -269,7 +269,7 @@
 \newcommand*{\edkey}{\hash_E}
 \newcommand*{\bskey}{\hash_B}
 \newcommand*{\keccakoutput}{\hash_K}
-\newcommand*{\blskey}{\blob_{BLS}}
+\newcommand*{\blskey}{\blob_L}
 \newcommand*{\metadatakey}{\blob_{128}}
 \newcommand*{\ringroot}{\blob_R}
 
@@ -382,7 +382,7 @@
 %\newcommand*{\valkey}{\mathbb{K}}
 \newcommand*{\vk¬bs}{b}
 \newcommand*{\vk¬ed}{e}
-\newcommand*{\vk¬bls}{BLS}
+\newcommand*{\vk¬bls}{L}  % TODO: Rename to be a single letter.
 \newcommand*{\vk¬metadata}{m}
 \newcommand*{\allvalkeys}{\seq{\valkey}_{\valcount}}
 
