--- a/text/bandersnatch.tex
+++ b/text/bandersnatch.tex
@@ -12,8 +12,8 @@ The singly-contextualized Bandersnatch Schnorr-like signatures $\bandersig{k}{c}
 The singly-contextualized Bandersnatch Ring\textsc{vrf} proofs $\bandersnatch{r}{c}{m}$ are a zk-\textsc{snark}-enabled analogue utilizing the Pedersen \textsc{vrf}, also defined by \cite{hosseini2024bandersnatch} and further detailed by \cite{cryptoeprint:2023/002}.
 
 \begin{align}
-  \getringroot(\seq{\bskey}) \in \blob_R &\equiv \text{commit}(\seq{\bskey})  \\
-  \bandersnatch{r \in \blob_R}{c \in \hash}{m \in \blob} \subset \blob_{784} &\equiv \{ x \mid x \in \blob_{784}, \text{verify}(r, c, m, x) = \top \}  \\
+  \getringroot(\seq{\bskey}) \in \ringroot &\equiv \text{commit}(\seq{\bskey})  \\
+  \bandersnatch{r \in \ringroot}{c \in \hash}{m \in \blob} \subset \blob_{784} &\equiv \{ x \mid x \in \blob_{784}, \text{verify}(r, c, m, x) = \top \}  \\
   \banderout{p \in \bandersnatch{r}{c}{m}} \in \hash &\equiv \text{output}(x \mid x \in \bandersnatch{r}{c}{m})_{\dots32}
 \end{align}
 
