--- a/text/best_chain.tex
+++ b/text/best_chain.tex
@@ -15,13 +15,13 @@ We define the latest finalized block as $\block^\final$. All associated terms co
 
 Formally:
 \begin{align}
-  \mathbf{A}(\header^\best) &\owns \header^\final \\
+  \ancestors(\header^\best) &\owns \header^\final \\
   \mathbf{U}^\best &\equiv \top \\
   \not\exists \header^A, \header^B &: \bigwedge \left\{\,\begin{aligned}
     \header^A &\ne \header^B \\
     \header^A_\¬timeslot &= \header^B_\¬timeslot \\
-    \header^A &\in \mathbf{A}(\header^\best) \\
-    \header^A &\not\in \mathbf{A}(\header^\final)
+    \header^A &\in \ancestors(\header^\best) \\
+    \header^A &\not\in \ancestors(\header^\final)
   \end{aligned}\right.
 \end{align}
 
