--- a/text/discussion.tex
+++ b/text/discussion.tex
@@ -2,7 +2,7 @@
 
 
 %\subsection{Security Assumptions}\label{sec:security}
-%$\ge \nicefrac{2}{3}$ validators honest and live.
+%$\ge \twothirds$ validators honest and live.
 %Short finality stall possible (up to one hour, more likely 12-18 seconds) where reversion possible. Such reversion results in major punishment of at least two validators. No reversion possible after finality.
 
 %\subsection{Parachains and Liveness}
