--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -10,7 +10,7 @@ The auditing process involves each node requiring themselves to fetch, evaluate 
 
 If all declared intentions for a work-report are matched by a positive judgment at any given juncture, then the work-report is considered \emph{audited}. Once all of any given block's newly available work-reports are audited, then we consider the block to be \emph{audited}. One prerequisite of a node finalizing a block is for it to view the block as audited. Note that while there will be eventual consensus on whether a block is audited, there may not be consensus at the time that the block gets finalized. This does not affect the crypto-economic guarantees of this system.
 
-In regular operation, no negative judgments will ultimately be found for a work-report, and there will be no direct consequences of the auditing stage. In the unlikely event that a negative judgment is found, then one of several things happens; if there are still more than $\nicefrac{2}{3}\valcount$ positive judgments, then validators issuing negative judgments may receive a punishment for time-wasting. If there are greater than $\nicefrac{1}{3}\valcount$ negative judgments, then the block which includes the work-report is ban-listed. It and all its descendants are disregarded and may not be built on. In all cases, once there are enough votes, a judgment extrinsic can be constructed by a block author and placed on-chain to denote the outcome. See section \ref{sec:disputes} for details on this.
+In regular operation, no negative judgments will ultimately be found for a work-report, and there will be no direct consequences of the auditing stage. In the unlikely event that a negative judgment is found, then one of several things happens; if there are still more than $\twothirds\valcount$ positive judgments, then validators issuing negative judgments may receive a punishment for time-wasting. If there are greater than $\onethird\valcount$ negative judgments, then the block which includes the work-report is ban-listed. It and all its descendants are disregarded and may not be built on. In all cases, once there are enough votes, a judgment extrinsic can be constructed by a block author and placed on-chain to denote the outcome. See section \ref{sec:disputes} for details on this.
 
 All announcements and judgments are published to all validators along with metadata describing the signed material. On receipt of sure data, validators are expected to update their perspective accordingly (later defined as $J$ and $A$).
 
@@ -28,7 +28,7 @@ All items in the work-package specification field of the work-report should be r
 
 \subsection{Selection of Reports}
 
-Each validator shall perform auditing duties on each valid block received. Since we are entering off-chain logic, and we cannot assume consensus, we henceforth consider ourselves a specific validator of index $v$ and assume ourselves focused on some recent block $\mathbf{B}$ with other terms corresponding to the state-transition implied by that block, so $\reports$ is said block's prior core-allocation, $\activeset$ is its prior validator set, $\H$ is its header \etc Practically, all considerations must be replicated for all blocks and multiple blocks' considerations may be underway simultaneously.
+Each validator shall perform auditing duties on each valid block received. Since we are entering off-chain logic, and we cannot assume consensus, we henceforth consider ourselves a specific validator of index $v$ and assume ourselves focused on some recent block $\block$ with other terms corresponding to the state-transition implied by that block, so $\reports$ is said block's prior core-allocation, $\activeset$ is its prior validator set, $\H$ is its header \etc Practically, all considerations must be replicated for all blocks and multiple blocks' considerations may be underway simultaneously.
 
 We define the sequence of work-reports which we may be required to audit as $\mathbf{Q}$, a sequence of length equal to the number of cores, which functions as a mapping of core index to a work-report pending which has just become available, or $\none$ if no report became available on the core. Formally:
 \begin{align}\label{eq:auditselection}
@@ -107,12 +107,12 @@ We then attempt to reproduce the report on the core to give $e_n$, a mapping fro
 \begin{equation}
   \begin{aligned}
   %  \forall (c, w) \in \mathbf{a}_n \!: e_n(w) \!\Leftrightarrow\! \begin{cases}
-  %    w = \Xi(p, c)\!\!\!\!\! &\when \exists p \in \workpackage: \se(p) = F(w) \\
+  %    w = \computedigest(p, c)\!\!\!\!\! &\when \exists p \in \workpackage: \se(p) = F(w) \\
   %    \bot &\otherwise
   %  \end{cases}
     \forall (c, w) \in \mathbf{a}_n :\ \ &\\[-10pt]
     e_n(w) \Leftrightarrow &\begin{cases}
-      w = \Xi(p, c)\!\!\! &\when \exists p \in \workpackage: \se(p) = F(w) \\
+      w = \computedigest(p, c)\!\!\! &\when \exists p \in \workpackage: \se(p) = F(w) \\
       \bot &\otherwise
     \end{cases}
   \end{aligned}\!\!
@@ -130,7 +130,7 @@ From this mapping the validator issues a set of judgments $\mathbf{j}_n$:
 %\begin{aligned}
 %    \mathbf{G}(w) &\equiv [ v \mid (s, v) \orderedin a ] \\
 %    \where (c, w, a) &\in \xtguarantees \\
-%    (\H, \mathbf{E}) &\in \mathbf{A}
+%    (\H, \mathbf{E}) &\in \ancestors
 %\end{aligned}
 %\end{equation}
 
@@ -138,21 +138,21 @@ All judgments $\mathbf{j}_*$ should be published to other validators in order th
 
 We consider a work-report as audited under two circumstances. Either, when it has no negative judgments and there exists some tranche in which we see a positive judgment from all validators who we believe are required to audit it; or when we see positive judgments for it from greater than two-thirds of the validator set.
 \begin{align}
-%  U(w) &\Leftrightarrow J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \vee |J_\top(w)| > \nicefrac{2}{3}\valcount%\!\!\!\!\!\!\!\!\!\!\!\!\!\!
+%  U(w) &\Leftrightarrow J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \vee |J_\top(w)| > \twothirds\valcount%\!\!\!\!\!\!\!\!\!\!\!\!\!\!
   U(w) &\Leftrightarrow \bigvee\,\left\{\,\begin{aligned}
       &J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \\
-      &|J_\top(w)| > \nicefrac{2}{3}\valcount
+      &|J_\top(w)| > \twothirds\valcount
   \end{aligned}\right.
 \end{align}
 
-Our block $\mathbf{B}$ may be considered audited, a condition denoted $\mathbf{U}$, when all the work-reports which were made available are considered audited. Formally:
+Our block $\block$ may be considered audited, a condition denoted $\mathbf{U}$, when all the work-reports which were made available are considered audited. Formally:
 \begin{align}
   \mathbf{U} &\Leftrightarrow \forall w \in \mathbf{W} : U(w)
 \end{align}
 
 For any block we must judge it to be audited (\ie $\mathbf{U} = \top$) before we vote for the block to be finalized in \textsc{Grandpa}. See section \ref{sec:grandpa} for more information here.
 
-Furthermore, we pointedly disregard chains which include the accumulation of a report which we know at least $\nicefrac{1}{3}$ of validators judge as being invalid. Any chains including such a block are not eligible for authoring on. The \emph{best block}, \ie that on which we build new blocks, is defined as the chain with the most regular Safrole blocks which does \emph{not} contain any such disregarded block. Implementation-wise, this may require reversion to an earlier head or alternative fork.
+Furthermore, we pointedly disregard chains which include the accumulation of a report which we know at least $\onethird$ of validators judge as being invalid. Any chains including such a block are not eligible for authoring on. The \emph{best block}, \ie that on which we build new blocks, is defined as the chain with the most regular Safrole blocks which does \emph{not} contain any such disregarded block. Implementation-wise, this may require reversion to an earlier head or alternative fork.
 
 As a block author, we include a judgment extrinsic which collects judgment signatures together and reports them on-chain. In the case of a non-valid judgment (\ie one which is not two-thirds-plus-one of judgments confirming validity) then this extrinsic will be introduced in a block in which accumulation of the non-valid work-report is about to take place. The non-valid judgment extrinsic removes it from the pending work-reports, $\reports$. Refer to section \ref{sec:disputes} for more details on this.
 
