--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -783,8 +783,8 @@ With conditions:
 \end{align}
 Thus, if the above conditions cannot be satisfied with unique values, then the result is $\none$, otherwise it is a tuple of $\mathbf{c}$ as above and $\mem$, $\registers$ such that:
 \begin{equation}\label{eq:memlayout}
-  \forall i \in \Nbits{32} : ((\mem_\mathbf{V})_i, (\mem_\mathbf{A})_{\floor{\nicefrac{i}{\mathsf{Z}_P}}}) = \left\{\begin{alignedat}{5}
-    &\tup{\is{\mathbf{V}}{\mathbf{o}_{i - \mathsf{Z}_Z}},\,\is{\mathbf{A}}{R}} &&\ \when
+  \forall i \in \Nbits{32} : ((\mem_\ram¬value)_i, (\mem_\ram¬access)_{\floor{\nicefrac{i}{\mathsf{Z}_P}}}) = \left\{\begin{alignedat}{5}
+    &\tup{\is{\ram¬value}{\mathbf{o}_{i - \mathsf{Z}_Z}},\,\is{\ram¬access}{R}} &&\ \when
         \mathsf{Z}_Z
             &\ \leq i < \ &&
                 \mathsf{Z}_Z + \len{\mathbf{o}}\\
